~ Polish the site a bit wtih a bit more info

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title: Genard Briane Ancero
 bio: "Senior 3D Artist"
-description: "Specializes on PC, Mobile (Android, iOS), and VR/AR. <br> Scalable Architectures, Optimization, UI, and Gameplay"
+description: "Senior 3D Artist with combined 7 years of experience in triple A Videogame Industry, 3D Production Management and Metaverse Building. Experienced in modelling and texturing of different subjects architecture, environment art, props, weapons, vehicles and vegetation."
 locale: en_US
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
