--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -11,9 +11,9 @@ Experienced in setting up technical, artistic and production workflows; successf
 different subjects; and provided artistic support and guidance for the team in a day to day basis.
 Skilled in next-gen 3D workflow, game engines, 3D asset integration, story-telling through art, art
 fundamentals, and art production management."
-current-position-name: "Lead 3D Artist"
-current-company-name: "Ubisoft Philippines"
-current-company-website: "https://www.ubisoft.com/en-us/company/careers/locations/taguig"
+current-position-name: "3D Design Associate Manager"
+current-company-name: "Accenture - Metaverse Continuum Group"
+current-company-website: "https://www.accenture.com/ph-en/services/metaverse-index"
 location: "Cavite, Philippines 🇵🇭"
 phone: "+63 927 009 4498"
 email: "genardancero@gmail.com"
@@ -32,7 +32,7 @@ social:
     {
       name: "ArtStation",
       url: "https://www.artstation.com/gbancero",
-      fontawesome_icon: "fa-artstation",
+      fontawesome_icon: "fa-paint-brush",
     },
   ]
 
